--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
     <section class="closing-section">
         <div class="closing-content">
             <h2 class="closing-text">Your Perfect Day Awaits</h2>
-            <p class="With thoughtful planning, a day in Downtown Dubai can feel both exciting and effortless. By balancing iconic landmarks, dining experiences, and relaxed exploration, you can create a memorable itinerary that showcases the best of this remarkable destination, especially when exploring <a href="https://songtr.ee/artist/12994519/things-to-do-in-Burj-Khalifa">things to do in Burj Khalifa</a></p>
+            <p class="<p> With thoughtful planning, a day in Downtown Dubai can feel both exciting and effortless. By balancing iconic landmarks, dining experiences, and relaxed exploration, you can create a memorable itinerary that showcases the best of this remarkable destination, especially when exploring <a href="https://songtr.ee/artist/12994519/things-to-do-in-Burj-Khalifa">things to do in Burj Khalifa</a></p>
             <a href="https://burjticket.com/" class="cta-button">Plan Your Visit Now</a>
         </div>
     </section>
